src/builder/tests/snapshots/ciboulette2postgres__builder__tests__insert_normal__no_returning.snap
---
source: src/builder/tests/insert_normal.rs
expression: res

---
(
    "INSERT INTO \"public\".\"mysimpletable\" (\"public\".\"mysimpletable\".\"first-name\", \"public\".\"mysimpletable\".\"last-name\") VALUES ($0, $1)",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "hello",
                ),
            ),
            Text(
                Some(
                    "world",
                ),
            ),
        ],
    },
)
